<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/animal_info_app"
            android:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <EditText
                android:id="@+id/etAnimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/animal_name__"
                android:minHeight="48dp" />


            <EditText
                android:id="@+id/etScientificName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/scientific_name__"
                android:minHeight="48dp" />


            <EditText
                android:id="@+id/etFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/family__"
                android:minHeight="48dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/save_"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update__"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/delete__"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/load__"
                    android:layout_weight="1" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
